--- a/app/src/popup/index.html
+++ b/app/src/popup/index.html
@@ -6,6 +6,7 @@
     <title>Popup</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./index.js"></script>
   </body>
