--- a/app/src/modules/popup/index.html
+++ b/app/src/modules/popup/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quick Access</title>
+    <title>Toppings: Quick Access</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
