--- a/web-ext/src/options/index.html
+++ b/web-ext/src/options/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toppings: Preferences</title>
-    <link rel="icon" href="/assets/icons/logo/icon32.png" type="image/png" />
+    <link rel="icon" href="/assets/icons/icon32.png" type="image/png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
